--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
         <!-- Quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, ex?
-            </span>
+            <span id="quote"></span>
         </div>
         <!-- Author -->
         <div class="quote-author">
-            <span id="author">Buddha</span>
+            <span id="author"></span>
         </div>
         <!-- Bottons -->
         <div class="button-container">
@@ -29,6 +28,8 @@
             <button id="new-quote">New Quote</button>
         </div>
     </div>
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
     <!-- script -->
     <script src="script.js"></script>
 </body>
